--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1300,6 +1300,9 @@ ul {
     left: 0;
     transition: left .3s
   }
+  .search label input {
+    max-width: 140px
+  }
 }
 .header-bottom__container {
   display: flex;
@@ -1363,7 +1366,7 @@ ul {
 }
 .header-select__list {
   width: 240px;
-  height: 220px
+  max-height: 220px
 }
 .header-select__item {
   display: block;
@@ -1393,21 +1396,13 @@ ul {
     outline-offset: -2px
   }
 }
-.header-select--showed > .header-select__dropdown {
+.header-select--showed .header-select__dropdown {
   display: block;
   transition: .5s;
   -webkit-animation: .5s .1s forwards show;
   animation: .5s .1s forwards show
 }
-.header-select--showed > .header-select__top svg {
-  transform: rotate(-90deg)
-}
-.header-select__subselect > .header-select__dropdown {
-  position: absolute;
-  left: 260px;
-  top: 0
-}
-.header-select__item--showed .header-select__top svg {
+.header-select--showed .header-select__top svg {
   transform: rotate(-90deg)
 }
 .search label {
@@ -1420,7 +1415,6 @@ ul {
 .search label input {
   border-bottom: 1px solid rgba(255,255,255,.85);
   padding-bottom: 4px;
-  max-width: 219px;
   font-weight: 400;
   font-size: 18px;
   color: currentColor
@@ -1440,11 +1434,6 @@ ul {
 .search label input::placeholder {
   color: var(--color-white);
   opacity: .85
-}
-@media (max-width:1200px) {
-  .search label input {
-    max-width: 140px
-  }
 }
 @media (max-width:768px) {
   .search label input {
@@ -2300,6 +2289,7 @@ ul {
 }
 .painter__img {
   width: 100%;
+  height: 100%;
   max-height: 600px;
   -o-object-fit: cover;
   object-fit: cover
@@ -3316,66 +3306,47 @@ input[type=number] {
   height: 150px
 }
 .projects-slider__slide {
+  position: relative;
   width: 100%;
   height: 100%;
   max-width: 450px;
   background-position: center;
   background-size: 100%;
   background-repeat: no-repeat;
-  transition: background-image .3s
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+  transition: filter .3s;
+  transition: filter .3s,-webkit-filter .3s
+}
+.projects-slider__slide:hover {
+  -webkit-filter: grayscale(0);
+  filter: grayscale(0)
 }
 .projects-slider__slide--1 {
-  background-image: url(../img/projects/freelands.jpg)
-}
-.projects-slider__slide--1:hover {
   background-image: url(../img/projects/freelands-color.jpg)
 }
 .projects-slider__slide--2 {
-  background-image: url(../img/projects/institute.jpg)
-}
-.projects-slider__slide--2:hover {
   background-image: url(../img/projects/institute-color.jpg)
 }
 .projects-slider__slide--3 {
-  background-image: url(../img/projects/workhouse.jpg)
-}
-.projects-slider__slide--3:hover {
   background-image: url(../img/projects/workhouse-color.jpg)
 }
 .projects-slider__slide--4 {
-  background-image: url(../img/projects/1849.jpg)
-}
-.projects-slider__slide--4:hover {
   background-image: url(../img/projects/1849-color.jpg)
 }
 .projects-slider__slide--5 {
-  background-image: url(../img/projects/hiscox.jpg)
-}
-.projects-slider__slide--5:hover {
   background-image: url(../img/projects/hiscox-color.jpg)
 }
 .projects-slider__slide--6 {
-  background-image: url(../img/projects/camden.jpg)
-}
-.projects-slider__slide--6:hover {
   background-image: url(../img/projects/camden-color.jpg)
 }
 .projects-slider__slide--7 {
-  background-image: url(../img/projects/stassen.jpg)
-}
-.projects-slider__slide--7:hover {
   background-image: url(../img/projects/stassen-color.jpg)
 }
 .projects-slider__slide--8 {
-  background-image: url(../img/projects/watts.jpg)
-}
-.projects-slider__slide--8:hover {
   background-image: url(../img/projects/watts-color.jpg)
 }
 .projects-slider__slide--9 {
-  background-image: url(../img/projects/esad.jpg)
-}
-.projects-slider__slide--9:hover {
   background-image: url(../img/projects/esad-color.jpg)
 }
 .projects-slider__next-btn,
@@ -3671,3 +3642,4 @@ input[type=number] {
     height: 25px
   }
 }
+/*# sourceMappingURL=main.css.map */
