--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1415,6 +1415,7 @@ ul {
 .search label input {
   border-bottom: 1px solid rgba(255,255,255,.85);
   padding-bottom: 4px;
+  width: 219px;
   font-weight: 400;
   font-size: 18px;
   color: currentColor
@@ -1445,6 +1446,8 @@ ul {
   color: var(--color-violet)
 }
 .search__btn {
+  margin-right: 6px;
+  padding: 0;
   color: currentColor
 }
 .search__btn svg {
@@ -3363,25 +3366,30 @@ input[type=number] {
   padding-top: 7px
 }
 .contacts__container {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
   overflow: hidden;
   border-top: 1px solid var(--color-telegrey)
 }
-.contacts__wrapper {
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between
-}
 .contacts__left {
-  width: 32.5%
+  margin-left: calc((100% - 1700px)/ 2);
+  padding: 116px 0 125px 50px;
+  width: 35.2%
+}
+@media (max-width:1700px) {
+  .contacts__left {
+    margin-left: 0
+  }
 }
 @media (max-width:1200px) {
   .contacts__left {
-    width: 47.2%
+    width: 55.7%
   }
 }
 @media (max-width:992px) {
   .contacts__left {
-    width: 67.1%
+    width: 77.1%
   }
 }
 @media (max-width:576px) {
@@ -3390,17 +3398,15 @@ input[type=number] {
   }
   .contacts__container {
     position: relative;
+    flex-direction: column;
     border: none
   }
-  .contacts__wrapper {
-    flex-direction: column
-  }
   .contacts__left {
+    padding: 0 15px 40px;
     width: 100%
   }
 }
 .contacts__right {
-  margin-right: -10%;
   width: 77.6%
 }
 @media (max-width:1200px) {
@@ -3411,12 +3417,10 @@ input[type=number] {
 .contacts-left {
   display: flex;
   flex-direction: column;
-  border-right: 1px solid var(--color-telegrey);
-  padding-top: 120px;
-  height: 700px
+  border-right: 1px solid var(--color-telegrey)
 }
 .contacts-left__address-title {
-  margin-bottom: -5px
+  margin-bottom: 5px
 }
 @media (max-width:576px) {
   .contacts__right {
@@ -3429,17 +3433,19 @@ input[type=number] {
   }
 }
 .contacts-left__address {
-  margin-bottom: 22px;
-  font-style: normal
+  margin-bottom: 38px;
+  font-style: normal;
+  line-height: 19px
 }
 .contacts-left__back-call {
-  font-weight: 400
+  font-weight: 400;
+  line-height: 1
 }
 .contacts-left__form {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin-top: 2px
+  margin-top: 10px
 }
 .contacts-left__form input {
   margin-top: 10px;
@@ -3468,9 +3474,8 @@ input[type=number] {
 }
 @media (max-width:576px) {
   .contacts-left__address {
-    margin-bottom: 336px;
-    font-size: 14px;
-    line-height: 19px
+    margin-bottom: 342px;
+    font-size: 14px
   }
   .contacts-left__back-call {
     font-size: 18px
@@ -3480,7 +3485,7 @@ input[type=number] {
     width: 100%
   }
   .contacts-left__form {
-    margin-top: 6px
+    margin-top: 14px
   }
 }
 .contacts-left__btn {
@@ -3527,16 +3532,6 @@ input[type=number] {
 .contacts-left__social-btn--telegram {
   background-image: url(../img/contacts/telegram.svg)
 }
-@media (max-width:576px) {
-  .contacts-left__social {
-    margin-top: 7px
-  }
-  .contacts-left {
-    border-right: none;
-    padding-top: 0;
-    height: 746px
-  }
-}
 .contacts-right {
   position: relative;
   right: 0;
@@ -3547,7 +3542,7 @@ input[type=number] {
   right: 0;
   top: 0;
   width: 100%;
-  height: 700px
+  height: 750px
 }
 .contacts-right__map [class*=copyright] {
   visibility: hidden
@@ -3557,6 +3552,12 @@ input[type=number] {
   filter: grayscale(100%)
 }
 @media (max-width:576px) {
+  .contacts-left__social {
+    margin-top: 7px
+  }
+  .contacts-left {
+    border-right: none
+  }
   .contacts-right__map {
     top: 65px;
     height: 320px
@@ -3642,4 +3643,3 @@ input[type=number] {
     height: 25px
   }
 }
-/*# sourceMappingURL=main.css.map */
