--- a/src/scss/components/_contacts.scss
+++ b/src/scss/components/_contacts.scss
@@ -2,43 +2,43 @@
   padding-top: 7px;
 
   &__container {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
     overflow: hidden;
     border-top: 1px solid var(--color-telegrey);
 
     @include xs {
       position: relative;
+      flex-direction: column;
       border: none;
     }
   }
 
-  &__wrapper {
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
-
-    @include xs {
-      flex-direction: column;
-    }
-  }
-
   &__left {
-    width: 32.5%;
+    margin-left: calc((100% - 1700px) / 2);
+    padding: 116px 0 125px 50px;
+    width: 35.2%;
+
+    @include lg-max {
+      margin-left: 0;
+    }
 
     @include md {
-      width: 47.2%;
+      width: 55.7%;
     }
 
     @include mobile-sm {
-      width: 67.1%;
+      width: 77.1%;
     }
 
     @include xs {
+      padding: 0 15px 40px;
       width: 100%;
     }
   }
 
   &__right {
-    margin-right: -10%;
     width: 77.6%;
 
     @include md {
@@ -55,11 +55,9 @@
   display: flex;
   flex-direction: column;
   border-right: 1px solid var(--color-telegrey);
-  padding-top: 120px;
-  height: 700px;
 
   &__address-title {
-    margin-bottom: -5px;
+    margin-bottom: 5px;
 
     @include xs {
       margin-bottom: 0;
@@ -69,18 +67,19 @@
   }
 
   &__address {
-    margin-bottom: 22px;
+    margin-bottom: 38px;
     font-style: normal;
+    line-height: 19px;
 
     @include xs {
-      margin-bottom: 336px;
+      margin-bottom: 342px;
       font-size: 14px;
-      line-height: 19px;
     }
   }
 
   &__back-call {
     font-weight: 400;
+    line-height: 1;
 
     @include xs {
       font-size: 18px;
@@ -91,7 +90,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin-top: 2px;
+    margin-top: 10px;
 
     input {
       margin-top: 10px;
@@ -114,7 +113,7 @@
     }
 
     @include xs {
-      margin-top: 6px;
+      margin-top: 14px;
     }
   }
 
@@ -172,8 +171,6 @@
 
   @include xs {
     border-right: none;
-    padding-top: 0;
-    height: 746px;
   }
 }
 
@@ -187,7 +184,7 @@
     right: 0;
     top: 0;
     width: 100%;
-    height: 700px;
+    height: 750px;
 
     [class*="copyright"] {
       visibility: hidden;
