--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -344,6 +344,7 @@
     input {
       border-bottom: 1px solid rgba(255, 255, 255, 0.85);
       padding-bottom: 4px;
+      width: 219px;
       font-weight: 400;
       font-size: 18px;
       color: currentColor;
@@ -384,6 +385,8 @@
   }
 
   &__btn {
+    margin-right: 6px;
+    padding: 0;
     color: currentColor;
 
     svg {
