added hovers to some elements, reworked the burger menu and search in the mobile version, reduced the number of breakpoints, and other minor fixes

--- a/src/scss/components/_catalog.scss
+++ b/src/scss/components/_catalog.scss
@@ -174,7 +174,7 @@
   &__left {
     width: 46.9%;
 
-    @include lg {
+    @include lg-max {
       width: 40%;
     }
 
@@ -191,7 +191,7 @@
   &__right {
     width: 50%;
 
-    @include lg {
+    @include lg-max {
       width: 57%;
     }
 
