--- a/src/scss/components/_editions.scss
+++ b/src/scss/components/_editions.scss
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: space-between;
     padding-top: 85px;
-    padding-bottom: 80px;
+    padding-bottom: 78px;
 
     @include mobile-sm {
       flex-direction: column;
@@ -15,7 +15,7 @@
 
     @include xs {
       padding-top: 52px;
-      padding-bottom: 45px;
+      padding-bottom: 51px;
     }
   }
 
@@ -28,7 +28,7 @@
     }
 
     @include mobile {
-      padding-bottom: 32px;
+      padding-bottom: 26px;
     }
 
     @include mobile-sm {
@@ -50,7 +50,7 @@
     }
 
     @include mobile-sm {
-      padding-top: 16px;
+      padding-top: 20px;
       width: 100%;
       max-width: 100%;
     }
@@ -263,6 +263,7 @@
 
 .price {
   margin-top: 12px;
+  width: 342px;
 
   &__title {
     margin-bottom: 10px;
@@ -275,17 +276,22 @@
     }
 
     @include mobile-sm {
-      margin: 0 0 7px;
+      margin: 0 0 8px;
+    }
+
+    @include xs {
+      margin-bottom: 5px;
     }
   }
 
   @include md {
     position: absolute;
-    right: 50px;
+    right: 53px;
     top: 93px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    width: 412px;
   }
 
   @include mobile-sm {
@@ -318,16 +324,8 @@
     font-size: 16px;
     color: var(--color-white);
 
-    &:first-child {
-      padding-left: 8px;
-
-      @include xs {
-        padding-left: 0;
-      }
-    }
-
     &:last-child {
-      padding-right: 13px;
+      padding-right: 9px;
 
       @include xs {
         padding-right: 0;
@@ -339,16 +337,55 @@
     }
   }
 
+  label[for="price-from"] {
+    span {
+      padding-right: 6px;
+      padding-left: 8px;
+
+      @include xs {
+        padding-right: 1px;
+        padding-left: 4px;
+      }
+    }
+  }
+
+  label[for="price-to"] {
+    span {
+      padding-right: 6px;
+
+      @include xs {
+        padding-right: 4px;
+      }
+    }
+  }
+
   input {
     outline: none;
     border: none;
     padding: 10px;
-    width: 79px;
+    width: 82px;
     color: var(--color-white);
-    background: rgba(157, 92, 208, 0.5);
+    background-color: rgba(157, 92, 208, 0.5);
+    transition: background-color 0.3s;
 
     &::placeholder {
       color: var(--color-white);
+    }
+
+    &:focus {
+      background-color: var(--color-krayola);
+    }
+
+    &:hover {
+      @include exclude-xs {
+        background-color: var(--color-amethyst);
+      }
+    }
+
+    &:active {
+      @include xs {
+        background-color: var(--color-purple);
+      }
     }
 
     &::-webkit-outer-spin-button,
@@ -436,12 +473,12 @@ input[type="number"] {
     max-width: 350px;
 
     @include md {
-      padding-top: 9px;
+      padding-top: 10px;
     }
 
     @include xs {
       flex-direction: column;
-      padding-top: 9px;
+      padding-top: 7px;
     }
   }
 
