--- a/src/scss/components/_contacts.scss
+++ b/src/scss/components/_contacts.scss
@@ -17,7 +17,7 @@
 
   &__left {
     margin-left: calc((100% - 1700px) / 2);
-    padding: 116px 0 125px 50px;
+    padding: 120px 0 122px 50px;
     width: 35.2%;
 
     @include lg-max {
@@ -55,6 +55,7 @@
   display: flex;
   flex-direction: column;
   border-right: 1px solid var(--color-telegrey);
+  padding-right: 15px;
 
   &__address-title {
     margin-bottom: 5px;
@@ -72,8 +73,9 @@
     line-height: 19px;
 
     @include xs {
-      margin-bottom: 342px;
+      margin-bottom: 361px;
       font-size: 14px;
+      letter-spacing: -0.06px;
     }
   }
 
@@ -99,11 +101,28 @@
       border: 1px solid var(--color-signal-black);
       border-radius: 100px;
       padding: 10px 20px;
-      width: 100%;
+      width: 103%;
+      transition: filter 0.3s;
 
       &::placeholder {
         font-size: 16px;
         color: var(--color-light-gray);
+      }
+
+      &:focus {
+        border-color: var(--color-krayola);
+      }
+
+      &:hover {
+        @include exclude-xs {
+          filter: drop-shadow(0 0 20px rgba(157, 92, 208, 0.7));
+        }
+      }
+
+      &:active {
+        @include xs {
+          border-color: var(--color-krayola);
+        }
       }
 
       @include xs {
@@ -154,11 +173,26 @@
   &__social-btn {
     display: block;
     margin-right: 20px;
-    width: 40px;
-    height: 40px;
+    border: 2px solid transparent;
+    border-radius: 50%;
+    width: 41px;
+    height: 41px;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    transition: filter 0.3s;
+
+    &:hover {
+      @include exclude-xs {
+        filter: drop-shadow(0 0 20px rgba(157, 92, 208, 0.7));
+      }
+    }
+
+    &:active {
+      @include xs {
+        border-color: var(--color-krayola);
+      }
+    }
 
     &--whatsapp {
       background-image: url('../img/contacts/whatsapp.svg');
