--- a/src/scss/components/_events.scss
+++ b/src/scss/components/_events.scss
@@ -189,13 +189,21 @@
     overflow: hidden;
     margin-bottom: 20px;
 
+    @include md {
+      margin-bottom: 30px;
+    }
+
     @include mobile-sm {
-      margin-bottom: 55px;
+      margin-bottom: 60px;
     }
 
     @include xs {
-      margin-bottom: 20px;
+      margin-bottom: 30px;
     }
+  }
+
+  &__bottom {
+    margin-bottom: -7px;
   }
 }
 
