--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -212,6 +212,15 @@ ul {
 
     &:hover {
       @include sliderBtnHover;
+
+      @include xs {
+        border-color: var(--color-dull-gray);
+        background-color: var(--color-dull-gray);
+
+        &::after {
+          color: var(--color-white);
+        }
+      }
     }
 
     &:active {
